# dutch-syllabifier

./: .gitignore  README.md  pyproject.toml
.githook/: pre-commit
NOTES/: phone_symbol_normalization_2026-07-08.md  sonority_lint_2026-07-08.md
docs/: sonority_data_sketch.md  sonority_onset_fallback.md  syllabic_consonant_nuclei.md  syllabic_nuclei_code_sketch.md
dutch_syllabifier/: __init__.py  core.py  data.py  learned.py  phone_inventory.py  phones.py  phonology.py  phonotactics.py  sonority.py  syllabifier.py  syllabify_phraser.py  syllables.py
dutch_syllabifier/data/: aliases.json  celex_boundary_classifier.json  celex_onset_coda_counts.json  consonants.json  diphthongs.json  illegal_onsets.json  legal_codas.json  legal_onsets.json  sonority_classes.json  syllabification_rules.md  vowels.json
dutch_syllabifier/training/: __init__.py  __main__.py  classifier.py  counts.py  dataset.py  evaluate.py
tests/: test_learned.py  test_phonotactics.py  test_public_api.py  test_sonority.py  test_syllabify_phraser.py  test_training.py
